--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 4.1.0)
+URL: https://github.com/marceelrf/fastaAnalyzer
+BugReports: https://github.com/marceelrf/fastaAnalyzer/issues
