--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,10 @@ LazyData: true
 Depends: R (>= 4.1.0)
 URL: https://github.com/marceelrf/fastaAnalyzer
 BugReports: https://github.com/marceelrf/fastaAnalyzer/issues
+RoxygenNote: 7.2.3
+Imports:
+  dplyr,
+  stringr,
+  tibble,
+  readr
+ 
